# wf-cabinet-transactions

./: CMakeLists.txt  README.md  install_sfml_deps.sh
src/: main.cpp  transactionLogger.cpp  transactionLogger.hpp
tests/: test_transactionLogger.cpp
